--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
 <body>
     <!-- Scripts -->
     <script type="text/javascript" src="assets/node_modules/jquery/dist/jquery.min.js"></script>
+
     <script src="assets/node_modules/popper.js/dist/umd/popper.min.js"></script>
+
     <script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
   integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
+
+    <script src="assets/scripts/script.js"></script>
 </body>
 </html>
