Adicionado referência ao style.css em index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" type="text/css" href="assets/node_modules/bootstrap/compiler/bootstrap.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
+    
+    <!-- Style CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/style/style.css">
 
     <title>Jogo da Memória</title>
     <meta name="description" content="Atividade acadêmica para exercitar conceitos da disciplina Design de Games">
@@ -23,7 +26,7 @@
     <meta name="author" content="Bryan Lima">
 </head>
 <body>
-    
+
     <!-- Scripts -->
     <script type="text/javascript" src="assets/node_modules/jquery/dist/jquery.min.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
