Adicionado navbar com menu collapse

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css">
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/brands.css">
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/solid.css">
+    <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/solid.css">
 
     <title>Jogo da Memória</title>
     <meta name="description" content="Atividade acadêmica para exercitar conceitos da disciplina Design de Games">
@@ -31,6 +31,34 @@
     <meta name="author" content="Bryan Lima">
 </head>
 <body>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #000000;">
+        <!-- Nome/Logo -->
+        <a class="navbar-brand d-md-none mb-0 mx-auto" href="index.html">Jogo da Memória <i class="fas fa-question-circle"></i></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite" aria-controls="navbarSite" aria-expanded="false" aria-label="Alterna navegação">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Menu colapsado -->
+        <div class="collapse navbar-collapse" id="navbarSite">
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link ml-3" href="index.html"><i class="fas fa-home"></i> Home <span class="sr-only">(página atual)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link ml-3" href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link ml-3 d-block d-md-none" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> GitHub Repo</a>
+            </li>
+            </ul>
+        </div>
+
+        <a class="btn btn-light d-none d-md-block mb-0 mr-auto" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> GitHub Repo</a>
+
+    </nav>
+
+    
 
     <!-- Scripts -->
     <script type="text/javascript" src="assets/node_modules/jquery/dist/jquery.min.js"></script>
