Incluído referência ao favicon.svg em index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/solid.css">
 
     <title>Jogo da Memória</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="description" content="Atividade acadêmica para exercitar conceitos da disciplina Design de Games">
     <meta name="robots" content="index, follow">
     <meta name="keywords" 
