Alterado ícone de exibição da navbar-brand Alterado de fa-question-circle (ícone fontawesome) para favicon.svg

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #000000;">
         <!-- Nome/Logo -->
-        <a class="navbar-brand d-md-none mb-0 mx-auto" href="index.html">Jogo da Memória <i class="fas fa-question-circle"></i></a>
+        <a class="navbar-brand d-md-none mb-0 mx-auto" href="index.html">Jogo da Memória <img src="favicon.svg" height="42" width="42"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite" aria-controls="navbarSite" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
         </button>
