Adicionado comentários quanto a exibição do link GitHub Repo O link aparece de modo diferente dependendo da dimensão de exibição da tela

--- a/index.html
+++ b/index.html
@@ -43,20 +43,21 @@
         <!-- Menu colapsado -->
         <div class="collapse navbar-collapse" id="navbarSite">
             <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link ml-3" href="index.html"><i class="fas fa-home"></i> Home <span class="sr-only">(página atual)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link ml-3" href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link ml-3 d-block d-md-none" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> GitHub Repo</a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link ml-3" href="index.html"><i class="fas fa-home"></i> Home <span class="sr-only">(página atual)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link ml-3" href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
+                </li>
+                <li class="nav-item">
+                    <!-- Link para GitHub Repo que é exibido quando dimensão da tela é menor que md -->
+                    <a class="nav-link ml-3 d-block d-md-none" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> GitHub Repo</a>
+                </li>
             </ul>
         </div>
 
+        <!-- Link para GitHub Repo que é exibido quando dimensão da tela é igual ou maior que md -->
         <a class="btn btn-light d-none d-md-block mb-0 mr-auto" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> GitHub Repo</a>
-
     </nav>
 
     
