Adicionado logo e título ao corpo da página index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,21 @@
         <a class="btn btn-light d-none d-md-block mb-0 mr-auto" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> GitHub Repo</a>
     </nav>
 
-    
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-5 mx-0 p-0">
+                <img class="rounded float-right" src="favicon.svg" height="150" width="122">    
+            </div>
+            <div class="col-7">
+                <div class="row">
+                    <h1 class="display-4">Jogo da</h1>
+                </div>
+                <div class="row">
+                    <h1 class="display-4">Memória</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Scripts -->
     <script type="text/javascript" src="assets/node_modules/jquery/dist/jquery.min.js"></script>
