--- a/index.html
+++ b/index.html
@@ -89,6 +89,6 @@
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
 
-    <script src="assets/scripts/script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
