Adicionado botões que direcionam para jogos da memória com 10 e 15 pares Ainda não finalizado

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-5 mx-0 p-0">
                 <img class="rounded float-right" src="favicon.svg" height="150" width="122">    
             </div>
@@ -72,6 +72,16 @@
                 <div class="row">
                     <h1 class="display-4">Memória</h1>
                 </div>
+            </div>
+        </div>
+        <div class="row mb-3 text-center">
+            <div class="col">
+                <a class="btn btn-warning px-5 py-3 text-white" href="#">Jogo da Memória <br><hr class="my-0"><small>Com 10 pares</small></a>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col">
+                <a class="btn btn-info  px-5 py-3 text-white" href="#">Jogo da Memória <br><hr class="my-0"><small>Com 15 pares</small></a>
             </div>
         </div>
     </div>
