Realizado algumas customizações nos botões jogo da memória em index.html

--- a/index.html
+++ b/index.html
@@ -61,27 +61,34 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="row mb-5">
-            <div class="col-5 mx-0 p-0">
-                <img class="rounded float-right" src="favicon.svg" height="150" width="122">    
+        <!-- <div class="row mb-4 justify-content-center">
+            <div class="pr-4">
+                <img src="favicon.svg" height="150" width="122">
             </div>
-            <div class="col-7">
-                <div class="row">
-                    <h1 class="display-4">Jogo da</h1>
+            <div class="ml-n3 pl-n3">
+                <h1 class="display-4">Jogo da</h1>
+                <h1 class="display-4">Memória</h1>
+            </div>
+        </div> -->
+        <div class="d-none d-md-block">
+            <div class="row mt-1 mb-3 justify-content-center">
+                <div class="col-5.5">
+                    <img class="float-left" src="favicon.svg" height="150" width="122">
                 </div>
-                <div class="row">
+                <div class="col-6.5 ml-1">
+                    <h1 class="display-4">Jogo da</h1>
                     <h1 class="display-4">Memória</h1>
                 </div>
             </div>
         </div>
-        <div class="row mb-3 text-center">
+        <div class="row mt-3 mb-3 text-center">
             <div class="col">
-                <a class="btn btn-warning px-5 py-3 text-white" href="#">Jogo da Memória <br><hr class="my-0"><small>Com 10 pares</small></a>
+                <a class="btn btn-warning px-5 py-3 text-black" href="#"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0"><small>Com 10 pares</small></a>
             </div>
         </div>
         <div class="row text-center">
             <div class="col">
-                <a class="btn btn-info  px-5 py-3 text-white" href="#">Jogo da Memória <br><hr class="my-0"><small>Com 15 pares</small></a>
+                <a class="btn btn-info  px-5 py-3 text-white" href="#"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0 bg-white"><small>Com 15 pares</small></a>
             </div>
         </div>
     </div>
