Adicionado classe bg-black (background-color) em style.css Inserido classe criada na navbar em index.html Anteriormente, background-color da navbar era estilizado através do atributo style

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #000000;">
+    <nav class="navbar navbar-expand-md navbar-dark bg-black">
         <!-- Nome/Logo -->
         <a class="navbar-brand d-md-none mb-0 mx-auto" href="index.html">Jogo da Memória <img src="favicon.svg" height="42" width="42"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite" aria-controls="navbarSite" aria-expanded="false" aria-label="Alterna navegação">
