Iniciado construção do rodapé em index.html

--- a/index.html
+++ b/index.html
@@ -61,15 +61,6 @@
     </nav>
 
     <div class="container-fluid">
-        <!-- <div class="row mb-4 justify-content-center">
-            <div class="pr-4">
-                <img src="favicon.svg" height="150" width="122">
-            </div>
-            <div class="ml-n3 pl-n3">
-                <h1 class="display-4">Jogo da</h1>
-                <h1 class="display-4">Memória</h1>
-            </div>
-        </div> -->
         <div class="d-none d-md-block">
             <div class="row mt-1 mb-3 justify-content-center">
                 <div class="col-5.5">
@@ -88,8 +79,19 @@
         </div>
         <div class="row text-center">
             <div class="col">
-                <a class="btn btn-info  px-5 py-3 text-white" href="#"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0 bg-white"><small>Com 15 pares</small></a>
+                <a class="btn btn-info mb-3 px-5 py-3 text-white" href="#"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0 bg-white"><small>Com 15 pares</small></a>
             </div>
+        </div>
+    </div>
+
+    <!-- RODAPÉ -->
+    <div class="container-fluid">
+        <div class="row bg-black">
+            <footer class="col-12">
+                <p class="text-center mt-3 text-white">
+                  &copy; 2020 &middot; Desenvolvido por Bryan Lima
+                </p>
+            </footer>
         </div>
     </div>
 
