--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
         </div>
         <div class="row mt-3 mb-3 text-center">
             <div class="col">
-                <a class="btn btn-warning px-5 py-3 text-black" href="with-10-pairs.html" id="btnGame10Pairs"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0"><small>Com 10 pares</small></a>
+                <a class="btn btn-warning px-5 py-3 text-black" href="com-10-pares.html" id="btnGame10Pairs"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0"><small>Com 10 pares</small></a>
             </div>
         </div>
         <div class="row text-center">
             <div class="col">
-                <a class="btn btn-info mb-3 px-5 py-3 text-white" href="with-15-pairs.html" id="btnGame15Pairs"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0 bg-white"><small>Com 15 pares</small></a>
+                <a class="btn btn-info mb-3 px-5 py-3 text-white" href="com-15-pares.html" id="btnGame15Pairs"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0 bg-white"><small>Com 15 pares</small></a>
             </div>
         </div>
     </div>
