--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <a class="btn btn-light d-none d-md-block mb-0 mr-auto" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> GitHub Repo</a>
     </nav>
 
+    <!-- CONTEÚDO PRINCIPAL -->
     <div class="container-fluid">
         <div class="d-none d-md-block">
             <div class="row mt-1 mb-3 justify-content-center">
@@ -85,6 +86,41 @@
     </div>
 
     <!-- RODAPÉ -->
+    <div class="container-fluid">
+        <div class="row bg-gray">
+            <!-- Logo/Nome -->
+            <div class="col-sm-12 col-md-4 mt-0 mb-2 my-auto text-white">
+                <div class="row mt-1 mb-3 justify-content-center">
+                    <div class="col-5.5">
+                        <img class="float-left" src="logo-gray.svg" height="70" width="56">
+                    </div>
+                    <div class="col-6.5 my-auto ml-1">
+                        <h1 class="lead">Jogo da</h1>
+                        <h1 class="lead">Memória</h1>
+                    </div>
+                </div>
+            </div>
+            <!-- Navbar vertical -->
+            <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
+                <hr class="hr-white">
+                <h6 class="lead"><strong>Menu</strong></h6>
+                <nav class="nav flex-column">
+                    <a class="nav-link active text-light" href="index.html"><i class="fas fa-home"></i> Home</a>
+                    <a class="nav-link text-light" href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
+                </nav>
+            </div>
+            <!-- Repositórios GitHub -->
+            <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
+                <hr class="hr-white">
+                <h6 class="lead"><strong>GitHub</strong></h6>
+                <nav class="nav flex-column">
+                    <a class="nav-link text-light" href="https://github.com/bryan-lima"><i class="fab fa-github"></i> Perfil</a>
+                    <a class="nav-link text-light" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> Projeto</a>
+                </nav>
+            </div>
+        </div>
+    </div>
+
     <div class="container-fluid">
         <div class="row bg-black">
             <footer class="col-12">
