Atualizado referência ao arquivo style.css em index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
     
     <!-- Style CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/style/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css">
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/solid.css">
 
     <title>Jogo da Memória</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="logo-default.svg" />
     <meta name="description" content="Atividade acadêmica para exercitar conceitos da disciplina Design de Games">
     <meta name="robots" content="index, follow">
     <meta name="keywords" 
@@ -65,7 +65,7 @@
         <div class="d-none d-md-block">
             <div class="row mt-1 mb-3 justify-content-center">
                 <div class="col-5.5">
-                    <img class="float-left" src="favicon.svg" height="150" width="122">
+                    <img class="float-left" src="logo-default.svg" height="150" width="122">
                 </div>
                 <div class="col-6.5 ml-1">
                     <h1 class="display-4">Jogo da</h1>
