Atualizado referência ao arquivo style.css em sobre.html

--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
     
     <!-- Style CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/style/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css">
