Alterado classes do título para classes criadas que utilizem a fonte nova (pirulen rg)

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <div class="col-5.5">
                     <img class="float-left" src="logo-default.svg" height="150" width="122">
                 </div>
-                <div class="col-6.5 ml-1">
-                    <h1 class="display-4">Jogo da</h1>
-                    <h1 class="display-4">Memória</h1>
+                <div class="col-6.5 ml-1 my-auto">
+                    <h1 class="title-pirulenrg">Jogo da</h1>
+                    <h1 class="title-pirulenrg">Memória</h1>
                 </div>
             </div>
         </div>
@@ -92,11 +92,11 @@
             <div class="col-sm-12 col-md-4 mt-0 mb-2 my-auto text-white">
                 <div class="row mt-1 mb-3 justify-content-center">
                     <div class="col-5.5">
-                        <img class="float-left" src="logo-gray.svg" height="70" width="56">
+                        <img class="float-left" src="logo-gray.svg" height="75" width="61">
                     </div>
-                    <div class="col-6.5 my-auto ml-1">
-                        <h1 class="lead">Jogo da</h1>
-                        <h1 class="lead">Memória</h1>
+                    <div class="col-6.5 my-2 ml-1">
+                        <h1 class="lead2-pirulenrg text-footer-gray">Jogo da</h1>
+                        <h1 class="lead2-pirulenrg text-footer-gray">Memória</h1>
                     </div>
                 </div>
             </div>
