Criado classe hr-gray em style.css e inserido em index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
             <!-- Navbar vertical -->
             <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
-                <hr class="hr-white">
+                <hr class="hr-gray">
                 <h6 class="lead"><strong>Menu</strong></h6>
                 <nav class="nav flex-column">
                     <a class="nav-link active text-light" href="index.html"><i class="fas fa-home"></i> Home</a>
@@ -111,7 +111,7 @@
             </div>
             <!-- Repositórios GitHub -->
             <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
-                <hr class="hr-white">
+                <hr class="hr-gray">
                 <h6 class="lead"><strong>GitHub</strong></h6>
                 <nav class="nav flex-column">
                     <a class="nav-link text-light" href="https://github.com/bryan-lima"><i class="fab fa-github"></i> Perfil</a>
