Atualizado referência para o logo-default.svg em sobre.html Devido alteração no nome do arquivo, de favicon.svg para logo-default.svg

--- a/sobre.html
+++ b/sobre.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/solid.css">
 
     <title>Sobre</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="logo-default.svg" />
     <meta name="description" content="Atividade acadêmica para exercitar conceitos da disciplina Design de Games">
     <meta name="robots" content="index, follow">
     <meta name="keywords" 
@@ -35,7 +35,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md navbar-dark bg-black">
         <!-- Nome/Logo -->
-        <a class="navbar-brand d-md-none mb-0 mx-auto" href="index.html">Jogo da Memória <img src="favicon.svg" height="42" width="42"></a>
+        <a class="navbar-brand d-md-none mb-0 mx-auto" href="index.html">Jogo da Memória <img src="logo-default.svg" height="42" width="42"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite" aria-controls="navbarSite" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
         </button>
