--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css">
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/brands.css">
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/solid.css">
-
-    <!-- Iconify -->
-    <script src="assets/icons/iconify.min.js"></script>
-    <!-- <script src="https://code.iconify.design/1/1.0.5/iconify.min.js"></script> -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css"
+        integrity="sha256-CuUPKpitgFmSNQuPDL5cEfPOOJT/+bwUlhfumDJ9CI4=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/brands.min.css"
+        integrity="sha256-wfbbsQFYKnizQi/WLPXS3wVDu0Dpi2yUQpZBDsb2H1s=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/solid.min.css"
+        integrity="sha256-pIAzc/BIIo/hSvtNEDIiMTBtR9EfK3COmnH2pt8cPDY=" crossorigin="anonymous" /> -->
 
     <title>Jogo da Memória</title>
     <link rel="icon" type="image/svg+xml" href="logo-default.svg" />
@@ -55,8 +57,8 @@
                         <span class="iconify" data-icon="entypo:game-controller" data-width="17px" data-inline="true"></span> Jogos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item btn btn-primary" href="com-10-pares.html">Jogo da Memória - Com 10 pares</a>
-                      <a class="dropdown-item" href="com-15-pares.html">Jogo da Memória - Com 15 pares</a>
+                      <a class="dropdown-item btn btn-primary" href="com-10-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 10 pares</a>
+                      <a class="dropdown-item" href="com-15-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 15 pares</a>
                     </div>
                 <li class="nav-item">
                     <a class="nav-link ml-3" href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
@@ -122,8 +124,8 @@
                         <span class="iconify" data-icon="entypo:game-controller" data-width="17px"  data-inline="true"></span> Jogos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="com-10-pares.html">Jogo da Memória - Com 10 pares</a>
-                      <a class="dropdown-item" href="com-15-pares.html">Jogo da Memória - Com 15 pares</a>
+                      <a class="dropdown-item" href="com-10-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 10 pares</a>
+                      <a class="dropdown-item" href="com-15-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 15 pares</a>
                     </div>
                     <a class="nav-link text-light" href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
                 </nav>
@@ -163,7 +165,8 @@
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
 
-    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+    <script src="assets/icons/iconify.min.js"></script>
+    <!-- <script src="https://code.iconify.design/1/1.0.5/iconify.min.js"></script> -->
 
     <script src="assets/script.js"></script>
 </body>
