Aplicado classe a.pirulenrg na navbar-brand Esta, aparece somente quando tamanho da tela de exibição é menor ou igual a md

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md navbar-dark bg-black">
         <!-- Nome/Logo -->
-        <a class="navbar-brand d-md-none mb-0 mx-auto" href="index.html">Jogo da Memória <img src="logo-default.svg" height="42" width="42"></a>
+        <a class="navbar-brand d-md-none mb-0 mx-auto pirulenrg" href="index.html">Jogo da Memória <img src="logo-default.svg" height="42" width="42"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite" aria-controls="navbarSite" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,9 +57,10 @@
                         <span class="iconify" data-icon="entypo:game-controller" data-width="17px" data-inline="true"></span> Jogos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item btn btn-primary" href="com-10-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 10 pares</a>
+                      <a class="dropdown-item" href="com-10-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 10 pares</a>
                       <a class="dropdown-item" href="com-15-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 15 pares</a>
                     </div>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link ml-3" href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
                 </li>
