--- a/sobre.html
+++ b/sobre.html
@@ -21,6 +21,12 @@
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css">
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/brands.css">
     <link rel="stylesheet" href="assets/node_modules/@fortawesome/fontawesome-free/css/solid.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css"
+        integrity="sha256-CuUPKpitgFmSNQuPDL5cEfPOOJT/+bwUlhfumDJ9CI4=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/brands.min.css"
+        integrity="sha256-wfbbsQFYKnizQi/WLPXS3wVDu0Dpi2yUQpZBDsb2H1s=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/solid.min.css"
+        integrity="sha256-pIAzc/BIIo/hSvtNEDIiMTBtR9EfK3COmnH2pt8cPDY=" crossorigin="anonymous" /> -->
 
     <title>Sobre</title>
     <link rel="icon" type="image/svg+xml" href="logo-default.svg" />
@@ -35,7 +41,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md navbar-dark bg-black">
         <!-- Nome/Logo -->
-        <a class="navbar-brand d-md-none mb-0 mx-auto" href="index.html">Jogo da Memória <img src="logo-default.svg" height="42" width="42"></a>
+        <a class="navbar-brand d-md-none mb-0 mx-auto pirulenrg" href="index.html">Jogo da Memória <img src="logo-default.svg" height="42" width="42"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite" aria-controls="navbarSite" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,6 +51,15 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link ml-3" href="index.html"><i class="fas fa-home"></i> Home <span class="sr-only">(página atual)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle ml-3" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="iconify" data-icon="entypo:game-controller" data-width="17px" data-inline="true"></span> Jogos
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="com-10-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 10 pares</a>
+                      <a class="dropdown-item" href="com-15-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 15 pares</a>
+                    </div>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link ml-3" href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
@@ -63,6 +78,48 @@
 
 
     <!-- RODAPÉ -->
+    <div class="container-fluid">
+        <div class="row bg-gray">
+            <!-- Logo/Nome -->
+            <div class="col-sm-12 col-md-4 mt-0 mb-2 my-auto text-white">
+                <div class="row mt-1 mb-3 justify-content-center">
+                    <div class="col-5.5">
+                        <img class="float-left" src="logo-gray.svg" height="75" width="61">
+                    </div>
+                    <div class="col-6.5 my-2 ml-1">
+                        <h1 class="lead2-pirulenrg text-footer-gray">Jogo da</h1>
+                        <h1 class="lead2-pirulenrg text-footer-gray">Memória</h1>
+                    </div>
+                </div>
+            </div>
+            <!-- Navbar vertical -->
+            <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
+                <hr class="hr-gray">
+                <h6 class="lead"><strong>Menu</strong></h6>
+                <nav class="nav flex-column">
+                    <a class="nav-link text-light" href="index.html"><i class="fas fa-home"></i> Home</a>
+                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="iconify" data-icon="entypo:game-controller" data-width="17px"  data-inline="true"></span> Jogos
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="com-10-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 10 pares</a>
+                      <a class="dropdown-item" href="com-15-pares.html"><span class="iconify" data-icon="vs-question-square" data-width="16px" data-inline="true"></span> Jogo da Memória - 15 pares</a>
+                    </div>
+                    <a class="nav-link active text-light" href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
+                </nav>
+            </div>
+            <!-- Repositórios GitHub -->
+            <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
+                <hr class="hr-gray">
+                <h6 class="lead"><strong>GitHub</strong></h6>
+                <nav class="nav flex-column">
+                    <a class="nav-link text-light" href="https://github.com/bryan-lima"><i class="fab fa-github"></i> Perfil</a>
+                    <a class="nav-link text-light" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> Projeto</a>
+                </nav>
+            </div>
+        </div>
+    </div>
+
     <div class="container-fluid">
         <div class="row bg-black">
             <footer class="col-12">
@@ -85,6 +142,9 @@
     <script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
+
+    <script src="assets/icons/iconify.min.js"></script>
+    <!-- <script src="https://code.iconify.design/1/1.0.5/iconify.min.js"></script> -->
 
     <script src="assets/script.js"></script>
 </body>
