Acrescentado id logo-navbar-brand, implementado classe personalizada para botão collapse da navbar

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md navbar-dark bg-black">
         <!-- Nome/Logo -->
-        <a class="navbar-brand d-md-none mb-0 mx-auto pirulenrg" href="index.html">Jogo da Memória <img src="logo-default.svg" height="42" width="42"></a>
+        <a class="navbar-brand d-md-none mb-0 mx-auto pirulenrg" href="index.html">Jogo da Memória <img src="logo-default.svg" id="logo-navbar-brand" height="42" width="34"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite" aria-controls="navbarSite" aria-expanded="false" aria-label="Alterna navegação">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon personalizado"></span>
         </button>
 
         <!-- Menu colapsado -->
@@ -104,8 +104,8 @@
     <div class="container-fluid">
         <div class="row bg-gray">
             <!-- Logo/Nome -->
-            <div class="col-sm-12 col-md-4 mt-0 mb-2 my-auto text-white">
-                <div class="row mt-1 mb-3 justify-content-center">
+            <div class="col-sm-12 col-md-4 mb-2 my-auto text-white">
+                <div class="row mt-4 mb-1 justify-content-center">
                     <div class="col-5.5">
                         <img class="float-left" src="logo-gray.svg" height="75" width="61">
                     </div>
