Removido atributo width e height de <img id=logo-navbar-brand> Atributos são definidos em style.css, conforme @media

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md navbar-dark bg-black">
         <!-- Nome/Logo -->
-        <a class="navbar-brand d-md-none mb-0 mx-auto pirulenrg" href="index.html">Jogo da Memória <img src="logo-default.svg" id="logo-navbar-brand" height="42" width="34"></a>
+        <a class="navbar-brand d-md-none mb-0 mx-auto pirulenrg" href="index.html">Jogo da Memória <img src="logo-default.svg" id="logo-navbar-brand"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite" aria-controls="navbarSite" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon personalizado"></span>
         </button>
