--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/solid.min.css"
         integrity="sha256-pIAzc/BIIo/hSvtNEDIiMTBtR9EfK3COmnH2pt8cPDY=" crossorigin="anonymous" /> -->
 
-    <title>Jogo da Memória</title>
+    <title>Home</title>
     <link rel="icon" type="image/svg+xml" href="logo-default.svg" />
     <meta name="description" content="Atividade acadêmica para exercitar conceitos da disciplina Design de Games">
     <meta name="robots" content="index, follow">
