Adicionado tag <small> para btnGame15Pairs e acrescentado comentários Comentários inseridos para facilitar leitura do código

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
     <!-- CONTEÚDO PRINCIPAL -->
     <div class="container-fluid">
+        <!-- Logo/Titulo -->
         <div class="d-none d-md-block">
             <div class="row mt-1 mb-3 justify-content-center">
                 <div class="col-5.5">
@@ -88,14 +89,18 @@
                 </div>
             </div>
         </div>
+
+        <!-- Botão - Jogo da Memória com 10 pares -->
         <div class="row mt-3 mb-3 text-center">
             <div class="col">
                 <a class="btn btn-warning px-5 py-3 text-black" href="com-10-pares.html" id="btnGame10Pairs"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0"><small>Com 10 pares</small></a>
             </div>
         </div>
+
+        <!-- Botão - Jogo da Memória com 15 pares -->
         <div class="row text-center">
             <div class="col">
-                <a class="btn btn-info mb-3 px-5 py-3 text-white" href="com-15-pares.html" id="btnGame15Pairs"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0 bg-white"><small>Com 15 pares</small></a>
+                <a class="btn btn-info mb-3 px-5 py-3 text-white" href="com-15-pares.html" id="btnGame15Pairs"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0 hr-white"><small>Com 15 pares</small></a>
             </div>
         </div>
     </div>
