Adicionado todo o conteúdo principal da página Adicionado parágrafo sobre o projeto, logo, tópicos de avaliação da atividade acadêmica, créditos das imagens e fonte utilizadas no projeto, logo e localização da faculdade, incluindo iframe do Google Maps

--- a/sobre.html
+++ b/sobre.html
@@ -89,6 +89,96 @@
         </div>
     </div>
 
+    <div class="container-fluid mt-3 mb-3">
+        <div class="row">
+            <div class="col">
+                <!-- Título página -->
+                <h2>Sobre este projeto</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12-sm col-md-6 mt-1 mb-4">
+                <!-- Parágrafo sobre projeto -->
+                <p class="lead text-justify">Atividade acadêmica para exercitar conceitos da disciplina <strong>Design de Games</strong>, 
+                    pelo curso de Análise e Desenvolvimento de Sistemas (ADS), do Centro Universitário Etep - Campus Bilac.</p>
+
+                <!-- Logo Projeto -->
+                <div class="row mt-4 mb-1 justify-content-center">
+                    <div class="col-5.5">
+                        <img class="float-left" src="logo-default.svg" height="80" width="65">
+                    </div>
+                    <div class="col-6.5 ml-1 my-auto">
+                        <h1 class="lead2-pirulenrg">Jogo da</h1>
+                        <h1 class="lead2-pirulenrg">Memória</h1>
+                    </div>
+                </div>
+
+                <!-- Traço de divisão -->
+                <hr class="mx-2">
+                
+                <!-- Tópicos de avaliação do projeto -->
+                <div class="row mx-auto">
+                    <div class="col-12-sm col-md-6 mt-2">
+                        <h3>Jogo em 2 modos:</h3>
+                        <p><i class="fas fa-check-square text-success"></i> 10 pares / 20 cartas</p>
+                        <p><i class="fas fa-check-square text-success"></i> 15 pares / 30 cartas</p>
+                    </div>
+                    <div class="col-12-sm col-md-6 mt-2">
+                        <h3>Critérios:</h3>
+                        <p><i class="fas fa-check-square text-success"></i> Criatividade</p>
+                        <p><i class="fas fa-check-square text-success"></i> Execução</p>
+                        <p><i class="fas fa-check-square text-success"></i> Jogabilidade</p>
+                        <p><i class="fas fa-check-square text-success"></i> Layout</p>
+                    </div>
+                </div>
+                <!-- Traço de divisão -->
+                <hr class="mx-2 mb-4">
+
+                <!-- GitHub pessoal e projeto, LinkedIn -->
+                <div class="row d-flex flew-row flex-fill justify-content-center mx-2 mt-2">
+                    <div class="align-content-stretch btn-group" role="group">
+                        <div class="btn-group"><a class="btn btn-dark text-light" target="_blank"  href="https://github.com/bryan-lima"><i class="fab fa-github"></i> Perfil <i class="fas fa-external-link-alt"></i></a></div>
+                        <div class="btn-group"><a class="btn btn-dark text-light" target="_blank"  href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> Projeto <i class="fas fa-external-link-alt"></i></a></div>
+                        <div class="btn-group"><a class="btn btn-primary text-light" target="_blank" href="https://www.linkedin.com/in/bryanlima1/"><i class="fab fa-linkedin"></i> Perfil <i class="fas fa-external-link-alt"></i></a></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12-sm col-md-6">
+                <!-- Créditos imagens e fonte -->
+                <p class="lead"><strong>Créditos:</strong></p>
+                <div class="row d-flex flex-nowrap justify-content-around mb-1">
+                    <!-- Logos Sites de Imagens -->
+                    <a target="_blank" href="https://br.freepik.com" alt="Logo Site Freepik" title="Site Freepik">
+                        <img src="assets/resources/logos/logo-freepik.svg" height="60px" id="logo-freepik"></a>
+                    <a target="_blank" href="http://bancodepersonagens.blogspot.com" alt="Logo Site Banco de Personagens" title="Site Banco de Personagens">
+                        <img src="assets/resources/logos/logo-banco-personagens.png" height="60px" id="logo-banco-personagens"></a>
+                    <!-- Logo Site de Fonte -->
+                    <a target="_blank" href="https://www.dafont.com/pt/" alt="Logo Site Dafont" title="Site Dafont">
+                        <img src="assets/resources/logos/logo-dafont.png" height="60px" id="logo-dafont"></a>
+                </div>
+
+                <!-- Dados sobre a Faculdade -->
+                <p class="lead mt-3"><strong>Faculdade:</strong></p>
+                <div class="row d-flex justify-content-around">
+                    <!-- Logos Faculdades -->
+                    <a class="my-auto" target="_blank" href="http://www.etep.edu.br" alt="Logo Centro Universitário Etep" title="Centro Universitário Etep">
+                    <img src="assets/resources/logos/logo-etep.png" height="74px" id="logo-etep"></a>
+
+                    <a class="my-auto" target="_blank" href="https://www.bilac.com.br" alt="Logo Campus Bilac" title="Campus Bilac">
+                        <img src="assets/resources/logos/logo-bilac.png" height="64px" id="logo-bilac"></a>
+                </div>
+    
+                <!-- Links Faculdades -->
+                <p class="mt-3 mb-0"><a target="_blank" href="http://www.etep.edu.br"><i class="fas fa-external-link-alt text-dark"></i> www.etep.edu.br</a></p>
+                <p class="mb-0"><a target="_blank" href="https://www.bilac.com.br"><i class="fas fa-external-link-alt text-dark"></i> www.bilac.com.br</a></p>
+                <p><i class="fas fa-map-marker-alt"></i> R. Francisco Paes, 84 - Centro, São José dos Campos - SP, 12210-100</p>
+                <!-- Google Maps -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14670.277846782408!2d-45.8856003!3d-23.1859087!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x66ef0d4cc6048f56!2sBILAC%20Faculdade!5e0!3m2!1spt-BR!2sbr!4v1587657990177!5m2!1spt-BR!2sbr" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+        </div>
+    </div>
+
     <!-- RODAPÉ -->
     <div class="container-fluid">
         <div class="row bg-gray">
