Centralizado coluna com logo/nome do rodapé em com-10-pares.html Replicado mesma codificação, conforme index.html

--- a/com-10-pares.html
+++ b/com-10-pares.html
@@ -75,14 +75,12 @@
         <a class="btn btn-light d-none d-md-block mb-0 mr-auto" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> GitHub Repo</a>
     </nav>
 
-
-
     <!-- RODAPÉ -->
     <div class="container-fluid">
         <div class="row bg-gray">
             <!-- Logo/Nome -->
-            <div class="col-sm-12 col-md-4 mt-0 mb-2 my-auto text-white">
-                <div class="row mt-1 mb-3 justify-content-center">
+            <div class="col-sm-12 col-md-4 mb-2 my-auto text-white">
+                <div class="row mt-4 mb-1 justify-content-center">
                     <div class="col-5.5">
                         <img class="float-left" src="logo-gray.svg" height="75" width="61">
                     </div>
