Adicionado título da página e personagens usados

--- a/com-10-pares.html
+++ b/com-10-pares.html
@@ -75,6 +75,33 @@
         <a class="btn btn-light d-none d-md-block mb-0 mr-auto" href="https://github.com/bryan-lima/memory-game"><i class="fab fa-github"></i> GitHub Repo</a>
     </nav>
 
+    <!-- CONTEÚDO PRINCIPAL -->
+    <div class="container-fluid d-none d-md-block">
+        <!-- Logo/Título -->
+        <div class="row bg-gray text-white">
+            <div class="col-0.5 mb-3 mt-2 mr-0 ml-4 p-0">
+                <img src="logo-default.svg" height="52" width="52">
+            </div>
+            <div class="col my-auto ml-0 p-0">
+                <h1 class="lead-pirulenrg mb-0">Jogo da</h1>
+                <h1 class="lead-pirulenrg">Memória</h1>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row mt-2">
+            <div class="col"></div>
+            <div class="col-5.5 text-center">
+                <h1 class="d-none d-md-block mb-0">Jogo com 10 pares</h1>
+                <h2 class="d-block d-md-none mb-0">Jogo com 10 pares</h2>
+                <hr class="mt-2 mb-2 hr-gray">
+                <h3 class="d-none d-md-block">Personagens Caverna do Dragão</h3>
+                <h5 class="d-block d-md-none">Personagens Caverna do Dragão</h5>
+            </div>
+            <div class="col"></div>
+        </div>
+    </div>
+
     <!-- RODAPÉ -->
     <div class="container-fluid">
         <div class="row bg-gray">
