--- a/com-10-pares.html
+++ b/com-10-pares.html
@@ -37,7 +37,7 @@
         javascript, bootstrap, npm, sass, cards">
     <meta name="author" content="Bryan Lima">
 </head>
-<body>
+<body onload="createGame()">
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md navbar-dark bg-black">
         <!-- Nome/Logo -->
