--- a/com-15-pares.html
+++ b/com-15-pares.html
@@ -76,7 +76,18 @@
     </nav>
 
     <!-- CONTEÚDO PRINCIPAL -->
-    
+    <div class="container-fluid d-none d-md-block">
+        <!-- Logo/Título -->
+        <div class="row bg-gray text-white">
+            <div class="col-0.5 mb-3 mt-2 mr-0 ml-4 p-0">
+                <img src="logo-default.svg" height="52" width="52">
+            </div>
+            <div class="col my-auto ml-0 p-0">
+                <h1 class="lead-pirulenrg mb-0">Jogo da</h1>
+                <h1 class="lead-pirulenrg">Memória</h1>
+            </div>
+        </div>
+    </div>
 
     <!-- RODAPÉ -->
     <div class="container-fluid">
