Adicionado título da página e personagens usados Personagens do Pica-Pau

--- a/com-15-pares.html
+++ b/com-15-pares.html
@@ -88,6 +88,19 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid">
+        <div class="row mt-2">
+            <div class="col"></div>
+            <div class="col-5.5 text-center">
+                <h1 class="d-none d-md-block mb-0">Jogo com 10 pares</h1>
+                <h2 class="d-block d-md-none mb-0">Jogo com 10 pares</h2>
+                <hr class="mt-2 mb-2 hr-gray">
+                <h3 class="d-none d-md-block">Personagens Pica-Pau</h3>
+                <h5 class="d-block d-md-none">Personagens Pica-Pau</h5>
+            </div>
+            <div class="col"></div>
+        </div>
+    </div>
 
     <!-- RODAPÉ -->
     <div class="container-fluid">
